[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "cblind"
version = "2.2.4"
description = "Color schemes for Python plots, from Paul Tol (2012)"
authors = [
    { name = "G. Wafflard-Fernandez" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
]
requires-python = ">=3.6"
dependencies = [
    "matplotlib",
    "numpy",
    "rich",
    "scipy",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "GPL-3.0"

[project.urls]
Homepage = "https://github.com/volodia99/cblind"

[project.optional-dependencies]
dev = [
    "pytest>=6.1",
]

[project.scripts]
cblind = "cblind.cblind:cblind"

[tool.setuptools]
license-files = [
    "LICENSE",
]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false
