[metadata]
name = cblind
version = 2.2.1
description = Color schemes for Python plots, from Paul Tol (2012)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/volodia99/cblind
author = G. Wafflard-Fernandez
license = GPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    rich
    scipy
python_requires = >=3.6

[options.entry_points]
console_scripts =
    cblind = cblind.cblind:cblind

[options.extras_require]
dev =
    pytest>=6.1
